重整 NXN 测试，完善多数据源覆盖 1. 按 API 场景归并公共测试。 2. 补齐各数据源的契约绑定。 3. 扩展原生命令与参数绑定测试。 4. 完善结果映射、主键及会话测试。 5. 校正能力声明与跳过条件。 6. 更新能力矩阵及验证结果。 7. 升级 SQL Server 测试驱动。